refactor tests add c/cpp judger