@@ -23,21 +23,21 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 
 @Component
-public class JavaWorker {
+public class CPPWorker {
     @Value("${justice.judger.code.tmp.filename}")
     private String fileName;
 
     @Value("${justice.judger.code.tmp.basedir}")
     private String baseDir;
 
-    @Value("${justice.judger.javac.executable}")
-    private String javac;
+    @Value("${justice.judger.compiler.executable}")
+    private String compiler;
 
-    @Value("${justice.judger.java.executable}")
-    private String java;
+    @Value("${justice.judger.sandbox.executable}")
+    private String sandbox;
 
-    @Value("${justice.judger.java.policy.file}")
-    private String policyFile;
+    @Value("${justice.judger.gpp.executable}")
+    private String gpp;
 
     @Value("${justice.judger.watchdog.timeout}")
     private Integer watchdogTimeout;
@@ -56,10 +56,11 @@ public class JavaWorker {
 
     private final TestCaseRepository testCaseRepository;
     private final ProblemRepository problemRepository;
+
     private final Logger logger = LoggerFactory.getLogger(this.getClass());
 
     @Autowired
-    public JavaWorker(TestCaseRepository testCaseRepository, ProblemRepository problemRepository) {
+    public CPPWorker(TestCaseRepository testCaseRepository, ProblemRepository problemRepository) {
         this.testCaseRepository = testCaseRepository;
         this.problemRepository = problemRepository;
     }
@@ -83,21 +84,21 @@ public class JavaWorker {
     private void save() throws IOException {
         cwd = baseDir + File.separator + submission.getId();
         Files.createDirectories(Paths.get(cwd));
-        Files.write(Paths.get(cwd + File.separator + fileName + ".java"), submission.getCode().getBytes());
+        Files.write(Paths.get(cwd + File.separator + fileName + ".cpp"), submission.getCode().getBytes());
     }
 
     private TaskResult compile() throws IOException {
-        ByteArrayOutputStream stderr = new ByteArrayOutputStream();
+        CommandLine cmd = new CommandLine(compiler);
+        cmd.addArgument("-compiler=" + gpp);
+        cmd.addArgument("-dir=" + cwd);
+        cmd.addArgument("-file=" + fileName + ".cpp");
+        logger.info(cmd.toString());
 
+        ByteArrayOutputStream stderr = new ByteArrayOutputStream();
         DefaultExecutor executor = new DefaultExecutor();
         executor.setWorkingDirectory(new File(cwd));
         executor.setStreamHandler(new PumpStreamHandler(null, stderr, null));
         executor.setWatchdog(new ExecuteWatchdog(watchdogTimeout));
-
-        CommandLine cmd = new CommandLine(javac);
-        // force using English for error message
-        cmd.addArgument("-J-Duser.language=en");
-        cmd.addArgument(fileName + ".java");
 
         TaskResult compile = new TaskResult();
         try {
@@ -106,31 +107,29 @@ public class JavaWorker {
         } catch (ExecuteException e) {
             compile.setStatus(Submission.STATUS_CE);
             compile.setError(stderr.toString());
-            logger.warn("\ncompile error:\t" + e.getMessage());
         }
-
         return compile;
     }
 
     private TaskResult run() throws IOException {
         TaskResult run = new TaskResult();
 
-        CommandLine cmd = new CommandLine(java);
-        cmd.addArgument("-Djava.security.manager");
-        cmd.addArgument("-Djava.security.policy==" + new File(policyFile).getPath());
-        cmd.addArgument("-Xmx" + problem.getMemoryLimit() + "m");
-        cmd.addArgument(fileName);
-
         long startTime = System.nanoTime();
         for (TestCase testCase : testCaseRepository.findByProblemId(submission.getProblemId())) {
             ByteArrayInputStream stdin = new ByteArrayInputStream(testCase.getInput().getBytes());
             ByteArrayOutputStream stdout = new ByteArrayOutputStream(), stderr = new ByteArrayOutputStream();
             DefaultExecutor executor = new DefaultExecutor();
-            ExecuteWatchdog watchdog = new ExecuteWatchdog(problem.getRuntimeLimit());
+            ExecuteWatchdog watchdog = new ExecuteWatchdog(watchdogTimeout);
 
             executor.setWorkingDirectory(new File(cwd));
             executor.setStreamHandler(new PumpStreamHandler(stdout, stderr, stdin));
             executor.setWatchdog(watchdog);
+
+            CommandLine cmd = new CommandLine(sandbox);
+            cmd.addArgument("-dir=" + cwd);
+            cmd.addArgument("-file=Main");
+            cmd.addArgument("-stdin=" + testCase.getInput());
+            logger.info(cmd.toString());
 
             try {
                 executor.execute(cmd);
@@ -142,7 +141,6 @@ public class JavaWorker {
                     run.setStatus(Submission.STATUS_RE);
                     run.setError(stderr.toString());
                 }
-                logger.warn("\nruntime error:\t" + e.getMessage());
                 return run;
             }
 
